Update openapi spec for tags
